--- a/client/src/_styles/login.scss
+++ b/client/src/_styles/login.scss
@@ -6,7 +6,8 @@
 
 .form {
   width: 370px;
-  height: 420px;
+  padding-top: 30px;
+  padding-bottom: 20px;
   position: relative;
   border-radius: 20px;
   border: 1px solid orange;
@@ -57,6 +58,13 @@
       z-index: 10;
       cursor: pointer;
     }
+  }
+  img {
+    width: 40px;
+    height: 40px;
+    border: 1px solid #80808090;
+    border-radius: 50%;
+    margin-right: 260px;
   }
   .file-content {
     p {
