--- a/client/src/_styles/sidebar.scss
+++ b/client/src/_styles/sidebar.scss
@@ -131,12 +131,25 @@
       input::placeholder {
         text-transform: uppercase;
       }
+      .upload-image {
+        max-width: 300px;
+        margin-top: 20px;
+      }
       .icons {
         gap: 20px;
         padding-top: 20px;
 
         .icon {
           cursor: pointer;
+          position: relative;
+          input {
+            width: 40px;
+            height: 40px;
+            z-index: 10;
+            opacity: 0;
+            position: absolute;
+            cursor: pointer;
+          }
         }
       }
       button {
