--- a/client/src/_styles/home.scss
+++ b/client/src/_styles/home.scss
@@ -6,7 +6,7 @@
   gap: 50px;
   flex-wrap: wrap;
   .threads {
-    gap: 50px;
+    gap: 20px;
     padding-bottom: 50px;
     .card {
       //   background: rgba($color: white, $alpha: 0.1);
@@ -72,7 +72,7 @@
           border-radius: 50%;
           cursor: pointer;
         }
-        .icon:hover {
+        .icon:not(:first-child):hover {
           background: rgba($color: white, $alpha: 0.1);
         }
       }
