--- a/client/src/_styles/sidebar.scss
+++ b/client/src/_styles/sidebar.scss
@@ -8,6 +8,47 @@
   position: fixed;
   left: 0;
   top: 0;
+  z-index: 10;
+  .top-bar {
+    width: calc(100vw - 60px);
+    height: 10vh;
+    position: fixed;
+    top: 0;
+    left: 60px;
+    z-index: 1;
+    justify-content: center;
+    background: #111;
+    gap: 10px;
+    img {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+    }
+    .icon {
+      width: 40px;
+      height: 40px;
+      background: rgba($color: white, $alpha: 0.1);
+      border-radius: 50%;
+      cursor: pointer;
+      position: relative;
+      input {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        opacity: 0;
+      }
+    }
+    input {
+      width: 300px;
+      height: 40px;
+      border-radius: 20px;
+      background: rgba($color: white, $alpha: 0.1);
+      border: none;
+      padding-left: 20px;
+      color: white;
+      outline: none;
+    }
+  }
   .logo {
     font-size: 2rem;
     cursor: pointer;
@@ -95,6 +136,7 @@
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 10000;
     .upload-wrap {
       background: #222;
       border-radius: 10px;
